syntax = "proto3";

package openproto.core;
option go_package = "msg/core";
option csharp_namespace = "src.msg.core";

message NotifyClientDisconnect {
  enum MSGID {
    __invilid__MSGID = 0;
    ID = 10001;
  }

  uint32 uid = 1;
  enum Reason {
    Disconnect = 0;
  }
  Reason reason = 2;
  uint32 gate_node_id = 3;
}